--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -27,7 +27,7 @@
 <body>
 <div align="center">
     <h1>Welcome to V2 the quarkus web application</h1>
-    <h2>Helm Baked service </h2>
+    <h2>Helm Baked service going to prod now</h2>
 </div>
 </body>
 </html>
